# HNAP4PlutoSDR

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AD9361_256kSPS.ftr  CHANGELOG.md  CMakeLists.txt  CmakeArmToolchain.cmake  README.md  config-firmware.sh  config.h  config.txt  decode_from_file.c  iio_loopback.c  log.c  log.h  makefile.targets  test_mac.c  test_phy_channel.c
.github/workflows/: build.yml  lint.yml
build_scripts/: build-firmware.sh  build_firmware.sh  build_standalone_binaries.sh  create_sysroot.sh
mac/: mac_bs.c  mac_bs.h  mac_channels.c  mac_channels.h  mac_common.c  mac_common.h  mac_config.h  mac_fragmentation.c  mac_fragmentation.h  mac_messages.c  mac_messages.h  mac_ue.c  mac_ue.h  tap_dev.c  tap_dev.h
overlay/: buildroot_zynq_pluto_defconfig_patch  linux_zynq_pluto_defconfig_patch
overlay/buildroot/: S40network  S41network  S45msd  device_config  index.html  motd  update.sh
overlay/buildroot/msd/img/: version.js
overlay/fw/etc/init.d/: S42udhcpc  S44sysctl  S60lldpd  S91iperf.sh  S92basestation.sh
overlay/fw/root/: .profile  config.txt  hnap_config.txt  save_hnap_config
phy/: phy_bs.c  phy_bs.h  phy_common.c  phy_common.h  phy_config.c  phy_config.h  phy_ue.c  phy_ue.h
platform/: platform.h  platform_simulation.c  platform_simulation.h  pluto.c  pluto.h  pluto_gpio.c  pluto_gpio.h  pluto_test.c
runtime/: basestation.c  client-calib.c  client.c  test.h  test_cfo_estimation.c  test_mac.c
src/mac/: mac_bs.c  mac_bs.h  mac_channels.c  mac_channels.h  mac_common.c  mac_common.h  mac_config.h  mac_fragmentation.c  mac_fragmentation.h  mac_messages.c  mac_messages.h  mac_ue.c  mac_ue.h  tap_dev.c  tap_dev.h
src/phy/: phy_bs.c  phy_bs.h  phy_common.c  phy_common.h  phy_config.c  phy_config.h  phy_ofdm_bs.c  phy_ofdm_bs.h  phy_ofdm_common.c  phy_ofdm_common.h  phy_ofdm_ue.c  phy_ofdm_ue.h  phy_sc_bs.c  phy_sc_bs.h  phy_sc_common.c  phy_sc_common.h  phy_sc_ue.c  phy_sc_ue.h  phy_ue.c  phy_ue.h
src/platform/: platform.h  platform_simulation.c  platform_simulation.h  pluto.c  pluto.h  pluto_gpio.c  pluto_gpio.h
src/runtime/: basestation.c  client-calib.c  client.c  test.h  test_cfo_estimation.c  test_mac.c  version.h.in
src/util/: log.c  log.h  ringbuf.c  ringbuf.h
startup_scripts/: S101transceiver.sh  S103basestation.sh  S42network_tap.sh  S90transceiver.sh
tests/: test.c  test_mac_common.c  test_mac_messages.c
util/: log.c  log.h  ringbuf.c
